# agent-mcp-runtime

./: .gitignore  AGENT.md  CHANGELOG.md  Cargo.toml  GEMINI.md  README.md  SECURITY.md  install.sh  registry.json
.github/workflows/: ci.yml  release.yml
docs/: architecture.md  design.md  ecosystem.md  getting_started.md  migration-guide.md
src/: lib.rs  main.rs  runner.rs
src/context/: mcp_provider.rs  mod.rs  project_context.rs
src/mcp/: client.rs  jsonrpc.rs  mod.rs  skill_tools.rs
src/providers/: claude.rs  factory.rs  gemini.rs  groq.rs  mod.rs  openai.rs
src/registry/: detector.rs  git_runner.rs  manifest.rs  mod.rs  pack_resolver.rs  parser.rs  resolver.rs  source.rs  tile.rs  tool.rs
